--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Cython==0.29.21
 librosa==0.8.0
 matplotlib==3.3.1
-numpy==1.18.5
+numpy==1.21.0  # Update to a more recent version
 phonemizer==2.2.1
-scipy==1.5.2
+scipy==1.7.0  # Update to a more recent version
 tensorboard==2.3.0
 torch==1.6.0
 torchvision==0.7.0
