--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ phonemizer==2.2.1
 scipy==1.14.0  # Update to a more recent version
 tensorboard==2.3.0
 torch==1.11.0 # changed
-torchvision==0.7.0
+torchvision==0.12.0 #changed
 Unidecode==1.1.1
